These changes were made on catalogtest and reflect Solr updates to this point.  They're mostly logging changes and shelving location-based map updates.