@@ -138,7 +138,13 @@ findDirectory()
 # JAVA_OPTIONS="-server -Xmx1024m -XX:+UseParallelGC -XX:NewRatio=5"
 if [ -z "$JAVA_OPTIONS" ]
 then
-  JAVA_OPTIONS="-server -Xms1024m -Xmx1024m -XX:+UseParallelGC -XX:NewRatio=5"
+  #JAVA_OPTIONS="-server -Xms1024m -Xmx1024m -XX:+UseParallelGC -XX:NewRatio=5"
+  #JAVA_OPTIONS="-server -Xms8192m -Xmx8192m -XX:+UseParallelGC -XX:+UseParallelOldGC -XX:+AggressiveOpts -XX:NewRatio=5 -Xloggc:/usr/local/vufind2/logs/gc.log"
+  #JAVA_OPTIONS="-server -Xms4096m -Xmx4096m -XX:+UseParallelGC -XX:+UseParallelOldGC -XX:+AggressiveOpts -XX:NewRatio=5 -Xloggc:/usr/local/vufind2/logs/gc.log"
+  JAVA_OPTIONS="-server -Xms2048m -Xmx2048m -XX:+UseParallelGC -XX:+UseParallelOldGC -XX:+AggressiveOpts -XX:NewRatio=5 -Xloggc:/usr/local/vufind2/logs/gc.log"
+  #JAVA_OPTIONS="-server -Xms1536m -Xmx1536m -XX:+UseParallelGC -XX:+UseParallelOldGC -XX:+AggressiveOpts -XX:NewRatio=5 -Xloggc:/usr/local/vufind2/logs/gc.log"
+  #JAVA_OPTIONS="-server -Xms1024m -Xmx1024m -XX:+UseParallelGC -XX:+UseParallelOldGC -XX:+AggressiveOpts -XX:NewRatio=5 -Xloggc:/usr/local/vufind2/logs/gc.log"
+  #JAVA_OPTIONS="-server -Xms512m -Xmx512m -XX:+UseParallelGC -XX:+UseParallelOldGC -XX:+AggressiveOpts -XX:NewRatio=5 -Xloggc:/usr/local/vufind2/logs/gc.log"
 fi
 
 ##################################################
@@ -173,7 +179,8 @@ fi
 ##################################################
 if [ -z "$JETTY_LOG" ]
 then
-    JETTY_LOG="$JETTY_HOME/logs"
+    #JETTY_LOG="$JETTY_HOME/logs"
+    JETTY_LOG="$VUFIND_HOME/logs/jetty"
 fi
 
 
